# Orchestra

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  ORCHESTRA_ARCHITECTURE.md  ORCHESTRA_FOUNDATION_SUMMARY.md  ORCHESTRA_V2_SUMMARY.md  README.md  REPO_SETUP.md  SWARM_DATA_GOVERNANCE.md  codeforge-hub.orc  generated_workflows.py  orchestra_advanced_features.md  orchestra_advanced_impl.py  orchestra_ast.py  orchestra_codegen.py  orchestra_examples_v2.orc  orchestra_lexer.py  orchestra_parser.py  pyproject.toml  requirements.txt  setup.py  test_orchestra_end_to_end.py  tool_routing
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  escalation.yml  feature_request.yml  orchestra_feature.yml
.github/workflows/: ci.yml  codeforge_hub.yml  orchestra.yml
docs/: ADVANCED_FEATURES.md  TRITON_RUNTIME_STATUS.md  V2_OVERVIEW.md
examples/: README.md  fintech_workflow.py  plaid_integration_workflow.py  simple_workflow.py  test_agents.py
examples/constitutional_tender/: 01_contract_review.py  02_bid_evaluation.py  03_anti_corruption_due_diligence.py  04_public_spending_audit.py  05_regulatory_impact_assessment.py
examples/v2/: adaptive_analysis.orc  batch_processing.orc  credit_analysis.orc  dfip_analytics.orc  fraud_detection.orc  tilt_enrichment.orc
orchestra/: __init__.py
orchestra/advanced/: __init__.py  conditionals.py  errors.py  routing.py
orchestra/blueprint_editor/: __init__.py  editor.py
orchestra/compilers/: __init__.py  executor.py  workflow_compiler.py
orchestra/core/: __init__.py  agent.py  agent_task.py  context.py  gates.py  task.py  workflow.py
orchestra/lsp/: __init__.py  server.py
orchestra/parser/: __init__.py  ast_nodes.py  cli.py  compiler_bridge.py  lexer.py  parser.py
orchestra/providers/: __init__.py  base.py  llm.py
orchestra/tests/: __init__.py  test_agent.py  test_compiler.py  test_context.py  test_executor.py  test_providers.py  test_task.py  test_workflow.py
workflows/: codeforge_hub.py  ct_bsa_aml_compliance.py  ct_customer_onboarding.py  ct_kyc_verification.py  ct_plaid_integration.py  ct_transaction_monitoring.py  example_feature.py
(+25 files in other folders)
