[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra-dsl"
version = "0.1.0"
description = "A framework for orchestrating multi-agent AI workflows"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["orchestra*"]
